--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#1E1F22</color>
+
+    <color name="colorPrimary">#1A73E8</color>
+    <color name="colorPrimaryDark">#174EA6</color>
+    <color name="colorAccent">#FF3B30</color>
+    <color name="colorBackground">#FFFFFF</color>
+    <color name="colorSurface">#F1F3F4</color>
+    <color name="colorOnPrimary">#FFFFFF</color>
+    <color name="colorOnSurface">#202124</color>
+
+    <color name="dark_background">#121212</color>
+    <color name="dark_surface">#1E1E1E</color>
+    <color name="dark_onSurface">#EDEDED</color>
 </resources>
