add launcher activity

--- a/app/src/main/res/layout/loading_overlay.xml
+++ b/app/src/main/res/layout/loading_overlay.xml
@@ -8,10 +8,12 @@
     android:focusable="true"
     android:visibility="gone">
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/loadingImage"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:tint="@color/colorError"
+        android:src="@drawable/ic_coordinadora" />
+
 </FrameLayout>
