--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         <androidx.camera.view.PreviewView
             android:id="@+id/previewView"
             android:layout_width="0dp"
-            android:visibility="visible"
+            android:visibility="gone"
             android:layout_height="500dp"
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@id/btnLogin"
@@ -74,9 +74,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:hint="Escribe aquí"
+            android:imeOptions="actionDone"
+            android:inputType="text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/cameraIcon"
             app:layout_constraintTop_toBottomOf="@id/textView" />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
