--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -27,21 +26,32 @@
         <androidx.camera.view.PreviewView
             android:id="@+id/previewView"
             android:layout_width="0dp"
-            android:visibility="visible"
             android:layout_height="500dp"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/btnLogin"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/btnLogin" />
 
         <com.example.coordinadoraapp.utils.QrOverlay
             android:id="@+id/qrOverlay"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="@id/previewView"
             app:layout_constraintBottom_toBottomOf="@id/previewView"
+            app:layout_constraintEnd_toEndOf="@id/previewView"
             app:layout_constraintStart_toStartOf="@id/previewView"
-            app:layout_constraintEnd_toEndOf="@id/previewView" />
+            app:layout_constraintTop_toTopOf="@id/previewView" />
+
+        <ImageView
+            android:id="@+id/btnCloseCamera"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_margin="12dp"
+            android:src="@drawable/ic_close"
+            android:contentDescription="Cerrar cámara"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="@id/previewView"
+            app:layout_constraintTop_toTopOf="@id/previewView" />
 
         <TextView
             android:id="@+id/textView"
