--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,6 +86,7 @@
             android:hint="Escribe aquí"
             android:imeOptions="actionDone"
             android:inputType="text"
+            android:text="etiqueta1d:720024556544001-latitud:6.74444-longitud:-75.45454-observacion:prueba"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/cameraIcon"
             app:layout_constraintTop_toBottomOf="@id/textView" />
